--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: postgrescontacts
     volumes:
       - db-data:/var/lib/postgresql/data
+    expose:
+      - "5432"
     # ports:
     #   - "5432:5432"
     environment:
@@ -25,6 +27,8 @@ services:
     build:
       context: ./backend/
       dockerfile: Dockerfile
+      expose:
+        - "3000"
     # ports:
     #   - "3000:3000"
     depends_on:
